# brazilian-holidays

./: .editorconfig  .gitignore  MANIFEST.in  README.md  mkdocs.yml  pyproject.toml  requirements.txt  setup.py
.github/: publish-to-pypi.yml
.github/workflows/: fff.yml  publish-to-pypi-uv.yml  publish-to-pypi.yml  publish-to-pypipoetry.yml
brazilian_holidays/: __init__.py  datas.py
data/: calendario.csv  feriados_.csv  feriados_2023.csv  holidays.csv  meus_feriados.md
docs/: .readthedocs.yaml  index.md  mkdocs.yml  req.txt  requirements.docs.txt  requirements.txt  ssss.md
docs/pages/: docs.md  install.md  refs.md  results.md  usar.md  write.md
docs/scripts/: 01_pacote.ipynb  01_pacoteold.ipynb  02_meus_feriados.ipynb  03_calendario.ipynb  03_pandas.ipynb  04_holidays.ipynb  05_dateutil.ipynb  dddd.md  my_paths.py
feriados_brasileiros/: __init__.py  calendario.py  datas.py  feriados.py  paths.py
scripts/: 01_pacote.ipynb  01_proximo_dia_util.ipynb  02_date_util.ipynb  02_pacote.ipynb  03_pandas.ipynb  README.md
