[project]
name = "brazilian-holidays"
version = "0.1.21"
description = 'Brazilian Holidays'
authors = [{ name = "Michel Metran", email = "michelmetran@gmail.com" }]
readme = "README.md"
license = "MIT"


keywords = ["holidays", "feriados", "brazilian"]
classifiers = [
    'Programming Language :: Python :: 3',
    'License :: OSI Approved :: MIT License',
    'Operating System :: OS Independent',
    'Natural Language :: Portuguese',
    'Intended Audience :: Developers',
]
requires-python = ">=3.11"
dependencies = ["holidays>=0.82", "pandas>=2.3.3", "tabulate>=0.9.0"]

[dependency-groups]
dev = ["notebook>=7.4.7"]
docs = ["mkdocs-jupyter>=0.25.1", "mkdocs-material[imaging]>=9.6.22"]


[project.urls]
Homepage = "https://github.com/michelmetran/brazilian-holidays"
Issues = "https://github.com/michelmetran/brazilian-holidays/issues"
Repository = "https://github.com/michelmetran/brazilian-holidays"
Documentation = "https://brazilian-holidays.readthedocs.io"
