[project]
name = "brazilian-holidays"
version = "0.1.25"
description = 'Brazilian Holidays'
authors = [{ name = "Michel Metran", email = "michelmetran@gmail.com" }]
keywords = ["holidays", "feriados", "brazilian"]
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "holidays>=0.82",
    # https://pypi.org/project/pandas/
    # 2.2.2 necessário para Colab
    "pandas>=2.2.2",
    # https://pypi.org/project/tabulate/
    "tabulate>=0.9.0",
]

[dependency-groups]
dev = [
    # https://pypi.org/project/notebook/
    "notebook>=7.4.7",
]
docs = [
    "mkdocs>=1.6.1",
    # https://pypi.org/project/mkdocs-jupyter/
    "mkdocs-jupyter>=0.25.1",
    # https://pypi.org/project/mkdocs-material/
    "mkdocs-material[imaging]>=9.6.22",
]


[project.urls]
Homepage = "https://github.com/michelmetran/brazilian-holidays"
Issues = "https://github.com/michelmetran/brazilian-holidays/issues"
Repository = "https://github.com/michelmetran/brazilian-holidays"
Documentation = "https://brazilian-holidays.readthedocs.io"
